[gd_scene load_steps=2 format=3 uid="uid://b4afxv7m021o2"]

[ext_resource type="Script" path="res://scripts/pitch_select_click.gd" id="1_vjua5"]

[node name="PitchSelectClick" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjua5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameRect1" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
color = Color(0.466181, 0.466181, 0.466181, 1)

[node name="Label" type="Label" parent="VBoxContainer/NameRect1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Curveball	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameRect2" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
color = Color(0.466181, 0.466181, 0.466181, 1)

[node name="Label" type="Label" parent="VBoxContainer/NameRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Slider"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameRect3" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
color = Color(0.466181, 0.466181, 0.466181, 1)

[node name="Label" type="Label" parent="VBoxContainer/NameRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4S Fastball	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameRect4" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
color = Color(0.466181, 0.466181, 0.466181, 1)

[node name="Label" type="Label" parent="VBoxContainer/NameRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2S Fastball"
horizontal_alignment = 1
vertical_alignment = 1
